allow vm args to be included in eclimrc
updated docs as well indicating the things like vm memory args can now
be included in your eclimrc

git-svn-id: https://eclim.svn.sourceforge.net/svnroot/eclim/trunk@2437 b5bd0a2e-1a23-0410-8567-9814cbbba304